feat: bundle D3 and Graphviz libraries locally for offline support

--- a/static/index.html
+++ b/static/index.html
@@ -4,12 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Call Graph</title>
-        <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
-        <script
-            src="https://unpkg.com/@hpcc-js/wasm@2/dist/graphviz.umd.js"
-            type="javascript/worker"
-        ></script>
-        <script src="https://unpkg.com/d3-graphviz@5/build/d3-graphviz.js"></script>
+        <script src="./vendor/d3.min.js"></script>
+        <script src="./vendor/graphviz.umd.js"></script>
+        <script src="./vendor/d3-graphviz.js"></script>
     </head>
 
     <body>
